--- a/tentative_experimenting.ipynb
+++ b/tentative_experimenting.ipynb
@@ -7,13 +7,9 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import networkx as nx\n",
-    "import os\n",
-    "import pandas as pd\n",
-    "import tarfile\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
-    "import urllib.request\n",
     "\n",
     "from torch_geometric.data import Data, Dataset\n",
     "from torch_geometric.loader import DataLoader\n",
@@ -35,8 +31,10 @@
     "WINDOW_STRIDE = 6\n",
     "LEAD_TIME = 1\n",
     "\n",
-    "NUM_EPOCHS = 50\n",
+    "NUM_EPOCHS = 20\n",
     "BATCH_SIZE = 32\n",
+    "LEARNING_RATE = 0.005\n",
+    "WEIGHT_DECAY = 5e-4\n",
     "\n",
     "# TODO add torch.manual_seed(1234567)"
    ],
@@ -1248,24 +1246,26 @@
     "    print(f\"Epoch {epoch + 1}/{NUM_EPOCHS}\")\n",
     "\n",
     "    model.train()\n",
-    "    train_losses.append(0)\n",
+    "    train_loss = 0\n",
     "    for batch in tqdm(train_loader, desc=\"Training\"):\n",
     "        batch = batch.to(device)\n",
     "        optimizer.zero_grad()\n",
     "        out = model(batch)\n",
     "        loss = F.mse_loss(out, batch.y)\n",
-    "        train_losses[-1] += loss.item() * batch.num_graphs / len(train_dataset)\n",
+    "        train_loss += loss.item() * batch.num_graphs / len(train_dataset)\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
+    "    train_losses.append(train_loss)\n",
     "\n",
     "    model.eval()\n",
     "    with torch.no_grad():\n",
-    "        eval_losses.append(0)\n",
+    "        eval_loss = 0\n",
     "        for batch in tqdm(eval_loader, desc=\"Evaluating\"):\n",
     "            batch = batch.to(device)\n",
     "            out = model(batch)\n",
     "            loss = F.mse_loss(out, batch.y)\n",
-    "            eval_losses[-1] += loss.item() * batch.num_graphs / len(eval_dataset)\n",
+    "            eval_loss += loss.item() * batch.num_graphs / len(eval_dataset)\n",
+    "        eval_losses.append(eval_loss)\n",
     "\n",
     "    print(f\"Loss (train/eval): {train_losses[-1]:.4f}/{eval_losses[-1]:.4f}\")"
    ],
