--- a/recurrent_forecasting.ipynb
+++ b/recurrent_forecasting.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "d5a93cbe-cb2f-4972-863f-5362493bc608",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-23T16:50:59.099245Z",
-     "iopub.status.busy": "2023-04-23T16:50:59.098998Z",
-     "iopub.status.idle": "2023-04-23T16:51:00.573694Z",
-     "shell.execute_reply": "2023-04-23T16:51:00.573175Z",
-     "shell.execute_reply.started": "2023-04-23T16:50:59.099223Z"
+     "iopub.execute_input": "2023-04-23T19:35:30.928558Z",
+     "iopub.status.busy": "2023-04-23T19:35:30.928249Z",
+     "iopub.status.idle": "2023-04-23T19:35:32.421779Z",
+     "shell.execute_reply": "2023-04-23T19:35:32.420905Z",
+     "shell.execute_reply.started": "2023-04-23T19:35:30.928532Z"
     }
    },
    "outputs": [
@@ -19,7 +19,9 @@
      "output_type": "stream",
      "text": [
       "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n"
+      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n",
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
     }
    ],
@@ -31,15 +33,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "6b1a4a83-be4e-4ece-89a1-5800c2614ec6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-23T16:51:00.574614Z",
-     "iopub.status.busy": "2023-04-23T16:51:00.574447Z",
-     "iopub.status.idle": "2023-04-23T16:51:02.396408Z",
-     "shell.execute_reply": "2023-04-23T16:51:02.395673Z",
-     "shell.execute_reply.started": "2023-04-23T16:51:00.574597Z"
+     "iopub.execute_input": "2023-04-23T19:35:32.423148Z",
+     "iopub.status.busy": "2023-04-23T19:35:32.422971Z",
+     "iopub.status.idle": "2023-04-23T19:35:32.445343Z",
+     "shell.execute_reply": "2023-04-23T19:35:32.444808Z",
+     "shell.execute_reply.started": "2023-04-23T19:35:32.423129Z"
     }
    },
    "outputs": [],
@@ -58,15 +60,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "d1363764-fa02-41e7-b53c-d72b384d2de5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-23T16:51:02.397888Z",
-     "iopub.status.busy": "2023-04-23T16:51:02.397625Z",
-     "iopub.status.idle": "2023-04-23T16:51:02.659593Z",
-     "shell.execute_reply": "2023-04-23T16:51:02.658882Z",
-     "shell.execute_reply.started": "2023-04-23T16:51:02.397870Z"
+     "iopub.execute_input": "2023-04-23T19:35:32.447596Z",
+     "iopub.status.busy": "2023-04-23T19:35:32.447338Z",
+     "iopub.status.idle": "2023-04-23T19:35:32.618991Z",
+     "shell.execute_reply": "2023-04-23T19:35:32.618247Z",
+     "shell.execute_reply.started": "2023-04-23T19:35:32.447576Z"
     }
    },
    "outputs": [
@@ -103,22 +105,22 @@
     }
    ],
    "source": [
-    "path = \"/notebooks/runs/test_resgcn_adj_type_downstream/2023-04-22_19-46-43.run\"\n",
+    "path = \"/notebooks/runs/resgcn_adj_type_downstream/2023-04-22_19-46-43.run\"\n",
     "chkpt = torch.load(path[11:])\n",
     "print(json.dumps(chkpt[\"hparams\"], indent=4))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "a17d4c9c-f379-4f31-92db-f2e3fba8bb09",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-23T16:51:07.142020Z",
-     "iopub.status.busy": "2023-04-23T16:51:07.141719Z",
-     "iopub.status.idle": "2023-04-23T16:51:36.598352Z",
-     "shell.execute_reply": "2023-04-23T16:51:36.597409Z",
-     "shell.execute_reply.started": "2023-04-23T16:51:07.141993Z"
+     "iopub.execute_input": "2023-04-23T19:35:32.620231Z",
+     "iopub.status.busy": "2023-04-23T19:35:32.620039Z",
+     "iopub.status.idle": "2023-04-23T19:36:02.116862Z",
+     "shell.execute_reply": "2023-04-23T19:36:02.115832Z",
+     "shell.execute_reply.started": "2023-04-23T19:35:32.620201Z"
     }
    },
    "outputs": [
@@ -133,7 +135,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 375/375 [00:29<00:00, 12.76it/s]\n"
+      "100%|██████████| 375/375 [00:29<00:00, 12.74it/s]\n"
      ]
     },
     {
@@ -173,7 +175,7 @@
        "================================================================="
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,15 +187,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "e12c42f6-f0fe-4d27-bbf5-501bfe370e74",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-23T16:51:36.599876Z",
-     "iopub.status.busy": "2023-04-23T16:51:36.599685Z",
-     "iopub.status.idle": "2023-04-23T16:51:44.114105Z",
-     "shell.execute_reply": "2023-04-23T16:51:44.113591Z",
-     "shell.execute_reply.started": "2023-04-23T16:51:36.599857Z"
+     "iopub.execute_input": "2023-04-23T19:36:02.118202Z",
+     "iopub.status.busy": "2023-04-23T19:36:02.118026Z",
+     "iopub.status.idle": "2023-04-23T19:36:09.557746Z",
+     "shell.execute_reply": "2023-04-23T19:36:09.557005Z",
+     "shell.execute_reply.started": "2023-04-23T19:36:02.118184Z"
     }
    },
    "outputs": [
