--- a/recurrent_forecasting.ipynb
+++ b/recurrent_forecasting.ipynb
@@ -18,8 +18,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n",
+      "\u001B[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001B[0m\u001B[33m\n",
+      "\u001B[0mNote: you may need to restart the kernel to use updated packages.\n",
       "The autoreload extension is already loaded. To reload it, use:\n",
       "  %reload_ext autoreload\n"
      ]
@@ -49,13 +49,9 @@
     "import functions\n",
     "import json\n",
     "import matplotlib.pyplot as plt\n",
-    "import os\n",
-    "import poptorch\n",
     "import torch\n",
     "\n",
-    "from dataset import LamaHDataset\n",
-    "from torchinfo import summary\n",
-    "from tqdm import tqdm"
+    "from torchinfo import summary"
    ]
   },
   {
