--- a/training.ipynb
+++ b/training.ipynb
@@ -17,8 +17,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n"
+      "\u001B[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001B[0m\u001B[33m\n",
+      "\u001B[0mNote: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
@@ -187,7 +187,7 @@
     "    HPARAMS[\"model\"][\"adjacency_type\"] = value\n",
     "    dataset = functions.load_dataset(HPARAMS, \"train\")\n",
     "    model = functions.construct_model(HPARAMS, dataset)\n",
-    "    history = functions.train(model, dataset, HPARAMS, save_dir=\"runs/temp\", on_ipu=True)"
+    "    history = functions.train(model, dataset, HPARAMS, save_dir=\"runs/resgcn_adj_type_downstream\", on_ipu=True)"
    ]
   }
  ],
