--- a/training.ipynb
+++ b/training.ipynb
@@ -178,7 +178,324 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Graph compilation:   3%|▎         | 3/100 [00:14<07:54]"
+      "Graph compilation: 100%|██████████| 100/100 [01:37<00:00]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training on IPU\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training: 100%|██████████| 6556/6556 [00:51<00:00, 127.50it/s]\n",
+      "Validating: 100%|██████████| 2185/2185 [00:17<00:00, 127.64it/s]\n",
+      "/usr/local/lib/python3.8/dist-packages/torch/nn/modules/module.py:1432: UserWarning: Positional args are being deprecated, use kwargs instead. Refer to https://pytorch.org/docs/master/generated/torch.nn.Module.html#torch.nn.Module.state_dict for details.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Epoch 1/20] Train: 92.7849 | Val 0.7559\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training: 100%|██████████| 6556/6556 [00:50<00:00, 128.88it/s]\n",
+      "Validating: 100%|██████████| 2185/2185 [00:17<00:00, 127.14it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Epoch 2/20] Train: 0.7874 | Val 0.1367\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training: 100%|██████████| 6556/6556 [00:51<00:00, 126.41it/s]\n",
+      "Validating: 100%|██████████| 2185/2185 [00:17<00:00, 127.41it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Epoch 3/20] Train: 0.1274 | Val 0.0589\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training: 100%|██████████| 6556/6556 [00:51<00:00, 127.90it/s]\n",
+      "Validating: 100%|██████████| 2185/2185 [00:17<00:00, 126.99it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Epoch 4/20] Train: 0.0342 | Val 0.0343\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training: 100%|██████████| 6556/6556 [00:51<00:00, 127.65it/s]\n",
+      "Validating: 100%|██████████| 2185/2185 [00:17<00:00, 126.77it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Epoch 5/20] Train: 0.0220 | Val 0.0231\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training: 100%|██████████| 6556/6556 [00:51<00:00, 127.63it/s]\n",
+      "Validating: 100%|██████████| 2185/2185 [00:17<00:00, 127.81it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Epoch 6/20] Train: 0.0196 | Val 0.0217\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training: 100%|██████████| 6556/6556 [00:51<00:00, 127.12it/s]\n",
+      "Validating: 100%|██████████| 2185/2185 [00:17<00:00, 126.93it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Epoch 7/20] Train: 0.0180 | Val 0.0207\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training: 100%|██████████| 6556/6556 [00:51<00:00, 127.09it/s]\n",
+      "Validating: 100%|██████████| 2185/2185 [00:17<00:00, 126.29it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Epoch 8/20] Train: 0.0173 | Val 0.0199\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training: 100%|██████████| 6556/6556 [00:51<00:00, 126.15it/s]\n",
+      "Validating: 100%|██████████| 2185/2185 [00:17<00:00, 127.06it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Epoch 9/20] Train: 0.0169 | Val 0.0197\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training: 100%|██████████| 6556/6556 [00:51<00:00, 126.74it/s]\n",
+      "Validating: 100%|██████████| 2185/2185 [00:17<00:00, 127.00it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Epoch 10/20] Train: 0.0166 | Val 0.0188\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training: 100%|██████████| 6556/6556 [00:51<00:00, 128.13it/s]\n",
+      "Validating: 100%|██████████| 2185/2185 [00:17<00:00, 127.52it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Epoch 11/20] Train: 0.0164 | Val 0.0187\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training: 100%|██████████| 6556/6556 [00:51<00:00, 127.34it/s]\n",
+      "Validating: 100%|██████████| 2185/2185 [00:17<00:00, 127.70it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Epoch 12/20] Train: 0.0162 | Val 0.0184\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training: 100%|██████████| 6556/6556 [00:51<00:00, 128.28it/s]\n",
+      "Validating: 100%|██████████| 2185/2185 [00:16<00:00, 129.28it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Epoch 13/20] Train: 0.0161 | Val 0.0181\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training: 100%|██████████| 6556/6556 [00:51<00:00, 127.33it/s]\n",
+      "Validating: 100%|██████████| 2185/2185 [00:17<00:00, 126.59it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Epoch 14/20] Train: 0.0160 | Val 0.0180\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training: 100%|██████████| 6556/6556 [00:51<00:00, 127.41it/s]\n",
+      "Validating: 100%|██████████| 2185/2185 [00:17<00:00, 128.37it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Epoch 15/20] Train: 0.0160 | Val 0.0177\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training: 100%|██████████| 6556/6556 [00:51<00:00, 127.80it/s]\n",
+      "Validating: 100%|██████████| 2185/2185 [00:17<00:00, 127.49it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Epoch 16/20] Train: 0.0159 | Val 0.0179\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training: 100%|██████████| 6556/6556 [00:51<00:00, 127.92it/s]\n",
+      "Validating: 100%|██████████| 2185/2185 [00:17<00:00, 128.03it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Epoch 17/20] Train: 0.0158 | Val 0.0180\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training: 100%|██████████| 6556/6556 [00:51<00:00, 126.47it/s]\n",
+      "Validating: 100%|██████████| 2185/2185 [00:17<00:00, 127.49it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Epoch 18/20] Train: 0.0157 | Val 0.0176\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training: 100%|██████████| 6556/6556 [00:51<00:00, 127.84it/s]\n",
+      "Validating: 100%|██████████| 2185/2185 [00:16<00:00, 128.60it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Epoch 19/20] Train: 0.0156 | Val 0.0182\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training: 100%|██████████| 6556/6556 [00:51<00:00, 128.52it/s]\n",
+      "Validating: 100%|██████████| 2185/2185 [00:16<00:00, 129.64it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Epoch 20/20] Train: 0.0155 | Val 0.0179\n",
+      "Loading dataset into memory...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 90%|█████████ | 339/375 [00:26<00:02, 12.65it/s]"
      ]
     }
    ],
